@@ -1,5 +1,7 @@
-# Copyright 1997, 1998, 1999, 2000, 2002, 2001, 2003
-# Free Software Foundation, Inc.
+# This testcase is part of GDB, the GNU debugger.
+
+# Copyright 1997, 1998, 1999, 2000, 2002, 2001, 2003, 2004 Free
+# Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -14,14 +16,6 @@
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
-
-# Please email any bugs, comments, and/or additions to this file to:
-# bug-gdb@prep.ai.mit.edu
-
-# use this to debug:
-#
-#log_user 1
-
 # step-test.exp -- Expect script to test stepping in gdb
 
 if $tracelevel then {
@@ -80,12 +74,15 @@ gdb_test "step" ".*${decimal}.*myglob.*"   "step into"
 # On IA-64, we also end up on callee instead of on the next line due
 # to the restoration of the global pointer (which is a caller-save).
 # Similarly on MIPS PIC targets.
+set test "step out"
 if { [istarget "hppa2.0w-hp-hpux*"] || [istarget "ia64-*-*"] || [istarget "mips*-*-*"]} {
-    send_gdb "finish\n"
-    gdb_expect {
-        -re ".*${decimal}.*a.*5.*= a.*3.*$gdb_prompt $" { pass "step out 1" }
-        -re ".*${decimal}.*callee.*INTO.*$gdb_prompt $" { pass "step out 2" }
-        timeout { fail "step out" }
+    gdb_test_multiple "finish" "$test" {
+        -re ".*${decimal}.*a.*5.*= a.*3.*$gdb_prompt $" {
+	    pass "$test"
+	}
+        -re ".*${decimal}.*callee.*INTO.*$gdb_prompt $" {
+	    pass "$test"
+	}
     }
 } else {
     gdb_test "finish" ".*${decimal}.*a.*5.*= a.*3.*" "step out"
@@ -110,31 +107,19 @@ proc test_i {name command here there} {
     global gdb_prompt
     
     set i 0
-    while 1 {
-	send_gdb "${command}\n"
-	gdb_expect {
-	    -re "$here.*$gdb_prompt $" {
-		# Okay, we're still on the same line.  Just step again.
-	    }
-	    -re "$there.*$gdb_prompt $" {
-		# We've reached the next line.  Rah.
-		pass "$name"
+    gdb_test_multiple "$command" "$name" {
+	-re "$here.*$gdb_prompt $" {
+	    # Have we gone for too many steps without seeing any progress?
+	    if {[incr i] >= 100} {
+		fail "$name (no progress after 100 steps)"
 		return
 	    }
-	    -re "$gdb_prompt $" {
-		# We got something else.  Fail.
-		fail "$name"
-		return
-	    }
-	    timeout {
-		fail "$name (timeout)"
-		return
-	    }
+	    send_gdb "$command\n"
+	    exp_continue
 	}
-
-	# Have we gone for too many steps without seeing any progress?
-	if {[incr i] >= 100} {
-	    fail "$name (no progress after 100 steps)"
+	-re "$there.*$gdb_prompt $" {
+	    # We've reached the next line.  Rah.
+	    pass "$name"
 	    return
 	}
     }
@@ -157,46 +142,35 @@ test_i "stepi into function's first source line" "stepi" \
 # Have to be careful here, if the finish does not work, 
 # then we may run to the end of the program, which
 # will cause erroneous failures in the rest of the tests
-send_gdb "finish\n"
-gdb_expect {
-  -re ".*(Program received|Program exited).*$gdb_prompt $" {
-    # Oops... We ran to the end of the program...  Better reset     
-    if {![runto_main]} then {
-      fail "Can't run to main"
-      return 0
+set test "stepi: finish call"
+gdb_test_multiple "finish" "$test" {
+    -re ".*${decimal}.*callee.*NEXTI.*$gdb_prompt $" {
+	pass "$test"
     }
-    if {![runto step-test.c:45]} {
-      fail "Can't run to line 45"
-      return 0
+    -re ".*(Program received|Program exited).*$gdb_prompt $" {
+	# Oops... We ran to the end of the program...  Better reset     
+	if {![runto_main]} then {
+	    fail "$test (Can't run to main)"
+	    return 0
+	}
+	if {![runto step-test.c:45]} {
+	    fail "$test (Can't run to line 45)"
+	    return 0
+	}
+	fail "$test"
     }
-    fail "stepi: finish call"
-  }
-  -re ".*${decimal}.*callee.*NEXTI.*$gdb_prompt $" {
-    pass "stepi: finish call"
-  }
-  -re ".*${decimal}.*callee.*STEPI.*$gdb_prompt $" {
-    # On PA64, we end up at a different instruction than PA32.
-    # On IA-64, we end up on callee instead of on the following line due
-    # to the restoration of the global pointer.
-    # Similarly on MIPS PIC targets.
-    if { [istarget "hppa2.0w-hp-hpux*"] || [istarget "ia64-*-*"] || [istarget "mips*-*-*"] } {
-        pass "stepi: finish call 2"
-	test_i "stepi: past call" "stepi" \
-	  ".*${decimal}.*callee.*STEPI"  ".*${decimal}.*callee.*NEXTI"
-    } else {
-	fail "stepi: finish call 2"
-        return
+    -re ".*${decimal}.*callee.*STEPI.*$gdb_prompt $" {
+	# On PA64, we end up at a different instruction than PA32.
+	# On IA-64, we end up on callee instead of on the following line due
+	# to the restoration of the global pointer.
+	# Similarly on MIPS PIC targets.
+	if { [istarget "hppa2.0w-hp-hpux*"] || [istarget "ia64-*-*"] || [istarget "mips*-*-*"] } {
+	    test_i "$test" "stepi" \
+		".*${decimal}.*callee.*STEPI"  ".*${decimal}.*callee.*NEXTI"
+	} else {
+	    fail "$test"
+	}
     }
-  }
-  -re "$gdb_prompt $" {
-    # We got something else.  Fail.
-    fail "stepi: finish call"
-    return
-  }
-  timeout {
-    fail "stepi: finish call (timeout)"
-    return
-  }
 }
 
 test_i "nexti over function" "nexti" \
@@ -223,21 +197,15 @@ gdb_test \
 gdb_test "continue" \
          ".*Breakpoint ${decimal},.*large_struct_by_value.*" \
 	 "run to pass large struct"
-send_gdb "step\n"
-gdb_expect {
+set test "large struct by value"
+gdb_test_multiple "step" "$test" {
     -re ".*step-test.exp: arrive here 1.*$gdb_prompt $" {
-	pass "large struct by value"
+	pass "$test"
     }
     -re ".*(memcpy|bcopy).*$gdb_prompt $" {
 	send_gdb "finish\n" ; gdb_expect -re "$gdb_prompt $"
 	send_gdb "step\n"
 	exp_continue
-    }
-    -re ".*$gdb_prompt $" {
-	fail "large struct by value"
-    }
-    timeout {
-	fail "large struct by value (timeout)"
     }
 }
 
